[package]
name = "winui_app"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Win32_System_Console",
] }

[dependencies.winui3]
git = "https://github.com/Alovchin91/winui3-rs.git"
features = ["XamlApp", "XamlNavigation"]
